# selfish

./: .gitignore  Cargo.toml  config-good.yaml  config.yaml  draw.sh  lab.sh  note  plot.py
eye/: README.md  package.json
eye/public/: index.html  stats.json.best
eye/src/: main.js  router.js  theme.scss
eye/src/components/: LinkInfo.vue  NodeExplorer.vue
eye/src/views/: Explore.vue  Home.vue
src/: client.rs  com.rs  dataset.rs  fitness.rs  ga.rs  gapool.rs  gene.rs  link.rs  main.rs  net.rs  node.rs  rpc.rs  server.rs  service.rs  storage.rs  util.rs
vis/: activity.html  explorer.html  package.json
